logs/yafowil.widget.datetime.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bda'...
Listing './lib/python3.5/site-packages/bda/intellidatetime'...
Compiling './lib/python3.5/site-packages/bda/intellidatetime/converter.py'...
***   File "./lib/python3.5/site-packages/bda/intellidatetime/converter.py", line 72
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bda.intellidatetime-1.2.2.egg-info'...
Listing './lib/python3.5/site-packages/node'...
Listing './lib/python3.5/site-packages/node/behaviors'...
Listing './lib/python3.5/site-packages/node/testing'...
Listing './lib/python3.5/site-packages/node/tests'...
Listing './lib/python3.5/site-packages/node-0.9.22.egg-info'...
Listing './lib/python3.5/site-packages/odict'...
Listing './lib/python3.5/site-packages/odict-1.6.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plumber'...
Listing './lib/python3.5/site-packages/plumber/tests'...
Listing './lib/python3.5/site-packages/plumber-1.5.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yafowil'...
Compiling './lib/python3.5/site-packages/yafowil/base.py'...
***   File "./lib/python3.5/site-packages/yafowil/base.py", line 463
    except ExtractionError, e:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yafowil/i18n'...
Listing './lib/python3.5/site-packages/yafowil/i18n/locales'...
Listing './lib/python3.5/site-packages/yafowil/i18n/locales/de'...
Listing './lib/python3.5/site-packages/yafowil/i18n/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/yafowil/i18n/locales/en'...
Listing './lib/python3.5/site-packages/yafowil/i18n/locales/en/LC_MESSAGES'...
Compiling './lib/python3.5/site-packages/yafowil/tests.py'...
***   File "./lib/python3.5/site-packages/yafowil/tests.py", line 34
    print fxml(xml)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yafowil/widget'...
Listing './lib/python3.5/site-packages/yafowil/widget/datetime'...
Listing './lib/python3.5/site-packages/yafowil/widget/datetime/locales'...
Listing './lib/python3.5/site-packages/yafowil/widget/datetime/locales/de'...
Listing './lib/python3.5/site-packages/yafowil/widget/datetime/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/yafowil/widget/datetime/locales/en'...
Listing './lib/python3.5/site-packages/yafowil/widget/datetime/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/yafowil/widget/datetime/resources'...
Listing './lib/python3.5/site-packages/yafowil-2.2.4.egg-info'...
Listing './lib/python3.5/site-packages/yafowil.widget.datetime-1.9.egg-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/component'...
Listing './lib/python3.5/site-packages/zope/component/testfiles'...
Listing './lib/python3.5/site-packages/zope/component/tests'...
Listing './lib/python3.5/site-packages/zope/deprecation'...
Listing './lib/python3.5/site-packages/zope/event'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope/lifecycleevent'...
Listing './lib/python3.5/site-packages/zope.component-4.4.1.dist-info'...
Listing './lib/python3.5/site-packages/zope.deprecation-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.event-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './lib/python3.5/site-packages/zope.lifecycleevent-4.2.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
